# video-frame-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_comparators.py  test_exporter.py  test_extractor.py  test_filter.py  test_pipeline.py  test_resizer.py
vfa/: __init__.py  cli.py  exporter.py  extractor.py  filter.py  models.py  pipeline.py  resizer.py
vfa/comparators/: __init__.py  base.py  histogram.py  phash.py  ssim.py
